[tool.poetry]
name = "quickchat"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^4.19.2"
huggingface-hub = "^0.19.4"
transformers = "^4.35.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
